First changes for WCANT 2020.

--- a/source/patterns/accordions.html
+++ b/source/patterns/accordions.html
@@ -61,7 +61,7 @@
 <li><a href="https://2018.europe.wordcamp.org/volunteer-information/volunteer-roles/pr-support/">Check details and apply for PR support</a></li></ul></div></div>
 <div class="accordion"><input id="accordion-11" type="checkbox" name="accordions"><label for="accordion-11">Registration desk</label><div class="accordion-content">
 <ul>
- 	<li>"Welcome to WordCamp Europe 2018" is your line and you'll use it to welcome and inform attendees at the entrance</li>
+ 	<li>"Welcome to WordCamp Antwerp 2018" is your line and you'll use it to welcome and inform attendees at the entrance</li>
  	<li>You'll check tickets</li>
  	<li>Prepare and handout badges</li>
 <li><a href="https://2018.europe.wordcamp.org/volunteer-information/volunteer-roles/registration-desk/">Check details and apply for Registration desk</a></li></ul></div></div>
@@ -107,7 +107,7 @@
 <li><a href="https://2018.europe.wordcamp.org/volunteer-information/volunteer-roles/shop-station-lead/">Check details and apply for Shop station lead</a></li></ul></div></div>
 <div class="accordion"><input id="accordion-19" type="checkbox" name="accordions"><label for="accordion-19">Social media support</label><div class="accordion-content">
 <ul>
- 	<li>You'll write posts and share pictures during talks about the talk, speaker and post directly on WCEU social media accounts</li>
+ 	<li>You'll write posts and share pictures during talks about the talk, speaker and post directly on WCANT social media accounts</li>
  	<li>You interact with people who are commenting on posts</li>
  	<li>You support attendees that ask for help using social media</li>
 <li><a href="https://2018.europe.wordcamp.org/volunteer-information/volunteer-roles/social-media-support/">Check details and apply for Social media support</a></li></ul></div></div>
@@ -172,7 +172,7 @@
 <li><a href="https://2018.europe.wordcamp.org/volunteer-information/volunteer-roles/time-keeper/">Check details and apply for Time keeper</a></li></ul></div></div>
 <div class="accordion"><input id="accordion-30" type="checkbox" name="accordions"><label for="accordion-30">Volunteer happiness manager</label><div class="accordion-content">
 <ul>
- 	<li>You take care and assist other WCEU volunteers</li>
+ 	<li>You take care and assist other WCANT volunteers</li>
  	<li>You bring them everything they might need during their shift (volunteer runner)</li>
  	<li>Volunteers rely on you to handle their requests in the #volunteer Slack channel</li>
 <li><a href="https://2018.europe.wordcamp.org/volunteer-information/volunteer-roles/volunteers-happiness-manager/">Check details and apply for Volunteer happiness manager</a></li></ul></div></div>
