--- a/source/patterns/comments.html
+++ b/source/patterns/comments.html
@@ -1,4 +1,4 @@
-<h2 class="comments-title">5 thoughts on “<span>First photos from #WCEU</span>”</h2>
+<h2 class="comments-title">5 thoughts on “<span>First photos from #WCANT</span>”</h2>
 <ol class="comment-list">
   <li class="comment byuser comment-author-name even thread-even depth-1" id="li-comment-2952">
     <article id="div-comment-2952" class="comment-body">
