--- a/source/patterns/main.html
+++ b/source/patterns/main.html
@@ -14,7 +14,7 @@
               <span class="realistic-ticket__info-action">Get your ticket today!</span>
             </span>
             <span class="realistic-ticket__part-right">
-              <span class="realistic-ticket__info-event">WordCamp Europe 2018</span>
+              <span class="realistic-ticket__info-event">WordCamp Antwerp 2020</span>
             <span>
           </a>
         </div>
@@ -41,7 +41,7 @@
     <div id="primary-sidebar">
 
       <section id="blog_subscription-3" class="widget jetpack_subscription_widget">
-        <h2 class="widget-title">Subscribe to WordCamp Europe 2017 News by email</h2>
+        <h2 class="widget-title">Subscribe to WordCamp Antwerp 2017 News by email</h2>
         <form action="#" method="post" accept-charset="utf-8" id="subscribe-blog-blog_subscription-3">
           <div id="subscribe-text"><p>Enter your email address to subscribe to this site and receive news by email.</p></div>
           <p id="subscribe-email">
