--- a/source/patterns/sponsors.html
+++ b/source/patterns/sponsors.html
@@ -255,14 +255,14 @@
         the SiteGround team. They are also involved with the
         WordPress community speaking, supporting and attending
         various WordCamps around the world, and by sponsoring
-        WordCamp Europe they want to keep contributing to the
+        WordCamp Antwerp they want to keep contributing to the
         amazing WordPress community.</p>
       </div>
     </div><!-- #sponsor -->
     <div id="wcorg-sponsor-5610" class="wcorg-sponsor">
-      <h3><a href="http://www.hover.com?utm_source=WC&amp;utm_medium=Event&amp;utm_campaign=WCEU">Hover</a></h3>
+      <h3><a href="http://www.hover.com?utm_source=WC&amp;utm_medium=Event&amp;utm_campaign=WCANT">Hover</a></h3>
       <div class="wcorg-sponsor-description">
-        <a href="http://www.hover.com?utm_source=WC&amp;utm_medium=Event&amp;utm_campaign=WCEU">
+        <a href="http://www.hover.com?utm_source=WC&amp;utm_medium=Event&amp;utm_campaign=WCANT">
         <img width="450" height="250" src="https://2016.europe.wordcamp.org/files/2016/05/logo-hover.png"
         class="attachment-wcb-sponsor-logo-horizontal-2x size-wcb-sponsor-logo-horizontal-2x wp-post-image" srcset="https://2016.europe.wordcamp.org/files/2016/05/logo-hover.png 450w, https://2016.europe.wordcamp.org/files/2016/05/logo-hover-300x167.png 300w"
         sizes="(max-width: 450px) 100vw, 450px"
@@ -524,7 +524,7 @@
         <p>Don&rsquo;t worry, this is not a sales pitch. Someone
         gave us a helping hand when we started with WordPress a
         long time ago, so we&rsquo;re paying it forward by
-        supporting WordCamp Europe.</p>
+        supporting WordCamp Antwerp.</p>
         <p>The next time you attend a talk, take a moment to say
         hi to the people sitting next to you. They might just be
         the ones to help you with a particular problem
@@ -715,7 +715,7 @@
         <p>Press Customizr&rsquo;s mission is to help small
         businesses easily customize their WordPress website.</p>
         <p>Press Customizr is happy to give back to the WordPress
-        community by sponsoring the 2016 WordCamp Europe
+        community by sponsoring the 2016 WordCamp Antwerp
         &#128578;</p>
         <p>Learn more at <a href="http://presscustomizr.com/"
         target="_blank">presscustomizr.com</a>.</p>
