--- a/source/patterns/widget-text-ticket-cta.html
+++ b/source/patterns/widget-text-ticket-cta.html
@@ -5,11 +5,11 @@
       <p>And receive a special, limited-edition swag item</p>
       <a class="realistic-ticket" href="#">
         <span class="realistic-ticket__part-left">
-          <span class="realistic-ticket__info-label">1000 tickets released</span>
+          <span class="realistic-ticket__info-label">50 tickets released</span>
           <span class="realistic-ticket__info-action">Get your ticket today!</span>
         </span>
         <span class="realistic-ticket__part-right">
-          <span class="realistic-ticket__info-event">WordCamp Europe 2018</span>
+          <span class="realistic-ticket__info-event">WordCamp Antwerp 2020</span>
         <span>
       </a>
     </div>
